Thu Oct 13 11:54:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        From James Megquier <jmegq at radiance dot com>

        * orbsvcs/orbsvcs/Notify/Service.{h,cpp}:
          Added destructor to fix runtime gcc4 problems. Fixes bugzilla
          2262

        * orbsvcs/orbsvcs/CosNotification.mpc:
        * orbsvcs/orbsvcs/Makefile.am:
          Added new cpp file

Wed Oct 12 19:26:48 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	* docs/notification/reliability.html:

	  Fix library name in service config file examples.

	  Fix formatting of NotifyExt.inl excerpts.

Wed Oct 12 12:47:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Big_Request_Muxing/server.cpp:
          Run the orb 3 seconds instead of 1 and print out how many
          messages we expect so that it is easy to see how many
          messages we didn't receive.

Wed Oct 12 10:53:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/ORB_Core.{h,cpp,i}:
        * tao/Transport_Queueing_Strategies.{h,cpp}:
          Added new flush strategy. For asynchronous calls we now have
          the following behaviour:
          - Normal oneways are not explicitly buffered, but when send
            returns EWOULDBLOCK we buffer the message and schedule for
            output, we just send the data later and don't explicitly
            flush things, we return control directly to the app
          - Oneways with SYNC_WITH_TRANSPORT, SYNC_WITH_SERVER and
            SYNC_WITH_TARGET, we don't explicitly buffer but when
            send returns EWOULDBLOCK we buffer things, but we do
            then explicitly flush things
          - When SYNC_NONE is specified, this is the same as
            TAO::SYNC_EAGER_BUFFERING and we do buffer then things
            explicitly

        * tests/Reliable_Oneways/client.cpp:
          After doing all calls run the orb for 3 seconds, this way at
          least all queues are flushed

